        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=17014
        REGRESSION: EUC-CN code A3A0 is mapped to U+E5E5 instead of U+3000

        Test: fast/encoding/char-decoding.html

        * platform/text/TextCodecICU.cpp:
        (WebCore::TextCodecICU::decode): Added a workaround that we used to have in Mac code.

        * platform/text/mac/TextCodecMac.cpp:
        (WebCore::TextCodecMac::decode): Corrected a comment.



Canonical link: https://commits.webkit.org/23648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29826 268f45cc-cd09-0410-ab3c-d52691b4dbfc